# frechet-audio-distance

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
frechet_audio_distance/: __init__.py  clap_score.py  fad.py  utils.py
frechet_audio_distance/models/: pann.py  pytorch_utils.py
src/: fad.py
test/: test_all.ipynb  test_all_fad.ipynb  test_clap_score.ipynb  test_encodec_shape.py  test_examples.py  test_pann_dimension_fix.py  utils.py
test/clap_score_text/: text_matching.csv  text_not_matching.csv
