[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frechet_audio_distance"
version = "0.1.0"
authors = [
  { name="Hao Hao Tan", email="helloharry66@gmail.com" },
]
description = "A lightweight library of Frechet Audio Distance calculation."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'torch',
  'scipy',
  'tqdm',
  'soundfile',
  'resampy',
]

[project.urls]
"Homepage" = "https://github.com/gudgud96/frechet-audio-distance"