[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frechet_audio_distance"
version = "0.3.5"
authors = [
  { name="Hao Hao Tan", email="helloharry66@gmail.com" },
]
description = "A lightweight library of Frechet Audio Distance calculation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  # numpy>=2.0 is required for Python 3.13+, while numpy<2.0 for earlier versions
  # to maintain compatibility with existing dependencies and avoid conflicts
  "numpy>=2.0.0; python_version >= '3.13'",
  "numpy<2.0.0; python_version < '3.13'",
  'torch',
  'scipy',
  'tqdm',
  'soundfile',
  'resampy',
  'torchlibrosa',
  'torchvision',
  'laion_clap',
  'transformers',
  'torchaudio',
  'encodec',
]

[project.urls]
"Homepage" = "https://github.com/gudgud96/frechet-audio-distance"

[tool.setuptools]
packages = ["frechet_audio_distance", "frechet_audio_distance.models"]
